<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Paper Rock Scissors</string>
    <string name="score_won">Won:</string>
    <string name="score_lost">Lost:</string>
    <string name="action_settings">Settings</string>
    <string name="scissors">scissors</string>
    <string name="paper">paper</string>
    <string name="rock">rock</string>
    <string name="txt_winner">txt_winner</string>
    <string name="text_player_hand">Player Hand</string>
    <string name="text_ai_hand">Computer Hand</string>
    <string name="btn_retry">Try Again!!!</string>
    <string name="txt_description">Rock Paper Scissors Game - pick your option and pray to win agains computer</string>
    
</resources>
