<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_won"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/score_won"
            android:textSize="24sp" />

	    <TextView
	        android:id="@+id/int_score_won"
	        android:layout_height="37dp"
	        android:layout_width="50dp"
	        android:text="0"
	        android:textSize="24sp"
	        android:layout_marginLeft="5sp"
            android:layout_marginTop="10sp"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <TextView
	        android:id="@+id/txt_lost"
	        android:layout_width="match_parent"
	        android:layout_height="37dp"
	        android:textSize="24sp"
	        android:layout_marginTop="10sp"
	        android:text="@string/score_lost" />
	
	    <TextView
	        android:id="@+id/int_score_lost"
	        android:layout_width="wrap_content"
	        android:layout_height="37dp"
	        android:text="0"
	        android:textSize="24sp"
	        android:layout_marginLeft="5sp"
            android:layout_marginTop="10sp"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    </LinearLayout>
    
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <TextView
	        android:id="@+id/txt_player_hand"
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:text="@string/text_player_hand" />
	    
	    <ImageView
	        android:id="@+id/img_player_pick"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10sp"
	        android:src="@drawable/rock" />
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/txt_ai_hand"
	        android:layout_width="wrap_content"
	        android:layout_height="45dp"
	        android:text="@string/text_ai_hand" />
	    
	    <ImageView
	        android:id="@+id/img_ai_pick"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10sp"
	        android:src="@drawable/rock" />
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="80dp"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/txt_winner"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_winner"
	        android:textSize="48sp" />
	</LinearLayout>
	
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.16"
        android:orientation="horizontal" >
	
	    <Button
	        android:id="@+id/btn_retry"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:onClick="sendRetry"
	        android:text="@string/btn_retry" />

	</LinearLayout>
</LinearLayout>